--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <script>
 const userId = prompt("Введите свой user_id (Telegram ID) для теста:");
 
-const API_URL = 'https://your-pella-domain.com:5000'; // Заменить на URL Pella с API
+const API_URL = 'http://172.17.0.249:5000'; // Заменить на URL Pella с API
 
 const clicksSpan = document.getElementById('clicks');
 const btn = document.getElementById('click-btn');
