--- a/index.html
+++ b/index.html
@@ -6,20 +6,17 @@
   <title>Box Clicker</title>
   <style>
     :root {
-      --bg: #f9fafb;
+      --bg: #f2f2f7;
       --box-bg: #fff;
       --text: #222;
-      --accent: #ff9500;
-      --shadow: rgba(0, 0, 0, 0.15);
-      --accent-light: #ffd9a0;
-      --accent-dark: #cc7a00;
+      --accent: #ff9f0a;
+      --shadow: rgba(0, 0, 0, 0.1);
     }
 
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      user-select: none;
     }
 
     html, body {
@@ -27,59 +24,53 @@
       width: 100%;
       font-family: "Segoe UI", Tahoma, sans-serif;
       background: var(--bg);
-      color: var(--text);
+    }
+
+    body {
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: space-between;
-      padding: 20px 16px;
-      overflow-x: hidden;
+      padding: 16px;
     }
 
     .profile {
       display: flex;
       align-items: center;
       background: var(--box-bg);
-      border-radius: 20px;
-      padding: 14px 20px;
-      box-shadow: 0 6px 14px var(--shadow);
+      border-radius: 16px;
+      padding: 12px 16px;
+      box-shadow: 0 4px 8px var(--shadow);
       width: 100%;
       max-width: 400px;
       margin-top: 10px;
-      transition: box-shadow 0.3s ease;
-    }
-
-    .profile:hover {
-      box-shadow: 0 8px 20px var(--accent-light);
     }
 
     .avatar {
-      width: 56px;
-      height: 56px;
+      width: 50px;
+      height: 50px;
       background: #ddd;
       border-radius: 50%;
-      overflow: hidden;
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 28px;
-      margin-right: 16px;
-      box-shadow: inset 0 2px 5px rgba(0,0,0,0.12);
-      flex-shrink: 0;
+      font-size: 24px;
+      margin-right: 14px;
+      box-shadow: inset 0 2px 4px rgba(0,0,0,0.1);
+      overflow: hidden;
     }
 
     .avatar img {
       width: 100%;
       height: 100%;
       object-fit: cover;
-      display: block;
+      border-radius: 50%;
     }
 
     .nickname {
-      font-weight: 700;
-      font-size: 20px;
-      color: var(--accent-dark);
-      text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+      font-weight: 600;
+      font-size: 18px;
+      color: var(--text);
     }
 
     .main {
@@ -88,33 +79,23 @@
       justify-content: center;
       align-items: center;
       width: 100%;
-      margin-top: 40px;
-      margin-bottom: 20px;
     }
 
     .box {
-      width: 180px;
-      height: 180px;
-      background: linear-gradient(135deg, var(--accent-light), var(--accent));
-      border-radius: 30px;
-      box-shadow: 0 8px 22px var(--shadow);
+      width: 160px;
+      height: 160px;
+      background: linear-gradient(135deg, #fff5e0, #ffd5a5);
+      border-radius: 20px;
+      box-shadow: 0 6px 15px var(--shadow);
       display: flex;
       justify-content: center;
       align-items: center;
       position: relative;
-      transition: transform 0.15s ease, box-shadow 0.3s ease;
-      cursor: pointer;
-      user-select: none;
-    }
-
-    .box:hover {
-      box-shadow: 0 12px 30px var(--accent);
-      transform: scale(1.05);
+      transition: transform 0.15s ease;
     }
 
     .box:active {
-      transform: scale(0.9);
-      box-shadow: 0 6px 15px var(--shadow);
+      transform: scale(0.95);
     }
 
     .box::after {
@@ -122,49 +103,41 @@
       position: absolute;
       top: 0;
       right: 30%;
-      width: 22px;
-      height: 36px;
-      background-color: var(--accent-dark);
+      width: 20px;
+      height: 32px;
+      background-color: var(--accent);
       clip-path: polygon(0 0, 100% 0, 100% 70%, 50% 100%, 0 70%);
-      opacity: 0.85;
     }
 
     .counter {
-      font-size: 22px;
-      font-weight: 700;
-      color: var(--accent-dark);
+      font-size: 20px;
+      font-weight: 600;
+      color: var(--text);
       background: #fff;
-      padding: 12px 28px;
-      border-radius: 18px;
-      box-shadow: 0 6px 14px var(--shadow);
-      user-select: none;
-      width: fit-content;
-      margin-bottom: 10px;
-      letter-spacing: 0.03em;
-      text-shadow: 0 1px 2px rgba(255 159 10 / 0.3);
+      padding: 10px 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px var(--shadow);
+      margin-bottom: 20px;
     }
 
     @media (max-width: 400px) {
       .box {
-        width: 140px;
-        height: 140px;
-        border-radius: 24px;
+        width: 130px;
+        height: 130px;
       }
 
       .counter {
         font-size: 18px;
-        padding: 10px 20px;
       }
 
       .nickname {
-        font-size: 18px;
+        font-size: 16px;
       }
 
       .avatar {
-        width: 48px;
-        height: 48px;
-        font-size: 22px;
-        margin-right: 12px;
+        width: 44px;
+        height: 44px;
+        font-size: 20px;
       }
     }
   </style>
@@ -172,10 +145,8 @@
 <body>
 
   <div class="profile">
-    <div class="avatar" id="avatar">
-      🙂 <!-- сюда подставим аватарку -->
-    </div>
-    <div class="nickname" id="nickname">@loading...</div>
+    <div class="avatar" id="avatar">🙂</div>
+    <div class="nickname" id="nickname">@unknown</div>
   </div>
 
   <div class="main">
@@ -191,62 +162,25 @@
       document.getElementById("count").textContent = count;
     }
 
-    // Получаем параметры из URL
-    function getUrlParam(name) {
-      return new URLSearchParams(window.location.search).get(name);
-    }
-
-    // Установка ника и аватара
-    function setUserInfo(nick, avatarUrl) {
-      const nicknameEl = document.getElementById('nickname');
-      const avatarEl = document.getElementById('avatar');
-
-      if (nick) {
-        nicknameEl.textContent = nick.startsWith('@') ? nick : '@' + nick;
-      } else {
-        nicknameEl.textContent = '@guest';
-      }
-
-      if (avatarUrl) {
-        avatarEl.innerHTML = `<img src="${avatarUrl}" alt="Avatar" />`;
-      } else {
-        avatarEl.textContent = '🙂';
-      }
-    }
-
-    // Основная логика определения ника и аватара
-    (function() {
-      const nickFromUrl = getUrlParam('nick');
-      const avatarFromUrl = getUrlParam('avatar');
-
-      if (window.Telegram && window.Telegram.WebApp) {
-        const tg = window.Telegram.WebApp;
-        tg.ready();
-
-        const user = tg.initDataUnsafe.user;
-        let nick = null;
-        let avatar = null;
-
+    // Telegram WebApp init
+    window.addEventListener("DOMContentLoaded", () => {
+      if (window.Telegram && Telegram.WebApp) {
+        Telegram.WebApp.ready();
+        const user = Telegram.WebApp.initDataUnsafe?.user;
         if (user) {
-          if (user.username) nick = '@' + user.username;
-          else if (user.first_name) nick = user.first_name;
-          if (user.photo_url) avatar = user.photo_url;
-        }
+          const nickname = user.username || user.first_name || "Безымянный";
+          document.getElementById("nickname").textContent = "@" + nickname;
 
-        // Если ник из Telegram есть, используем его, иначе из URL
-        if (!nick && nickFromUrl) {
-          nick = nickFromUrl.startsWith('@') ? nickFromUrl : '@' + nickFromUrl;
+          if (user.photo_url) {
+            const img = document.createElement("img");
+            img.src = user.photo_url;
+            const avatar = document.getElementById("avatar");
+            avatar.innerHTML = "";
+            avatar.appendChild(img);
+          }
         }
-        if (!avatar && avatarFromUrl) {
-          avatar = avatarFromUrl;
-        }
-
-        setUserInfo(nick, avatar);
-      } else {
-        // Не в Telegram — используем URL параметры или дефолт
-        setUserInfo(nickFromUrl, avatarFromUrl);
       }
-    })();
+    });
   </script>
 
 </body>
